# Eregen

./: .gitignore  LICENSE  THIRD-PARTY-LICENSES.template  docker-compose.yml
apps/admin-web/: index.html  package-lock.json  package.json  tsconfig.json
apps/admin-web/src/: App.vue
apps/family-app/: .flutter-plugins-dependencies  pubspec.yaml
apps/family-app/assets/: amap.html
apps/family-app/lib/: app_state.dart  main.dart
apps/miniprogram/: app.js  app.json  app.wxss  package.json  sitemap.json
apps/miniprogram/utils/: api.js  auth.js  storage.js
apps/nurse_terminal/: pubspec.yaml
apps/nurse_terminal/lib/: main.dart
apps/nurse_terminal/linux/: CMakeLists.txt
apps/nurse_terminal/test/: widget_test.dart
apps/nurse_terminal/web/: index.html  manifest.json
apps/nurse_terminal/windows/: CMakeLists.txt
apps/ui-prototypes/: admin-web-audit-detail.html  admin-web-dashboard-v2.html  admin-web-dashboard.html  admin-web-device-v2.html  admin-web-device.html  admin-web-regulatory-dashboard.html  admin-web-subscription-v2.html  admin-web-subscription.html  admin-web-user-v2.html  admin-web-user.html  family-app-alert-v2.html  family-app-alert.html  family-app-health-v2.html  family-app-health.html  family-app-home-v2.html  family-app-home.html  family-app-medication-v2.html  family-app-medication.html  family-app-welfare-v2.html  miniprogram-home-v2.html  miniprogram-home.html  website-home-v2.html  website-home.html
apps/ui-prototypes/admin-web/: dashboard.html  devices.html  subscriptions.html  users.html
apps/ui-prototypes/community-wb/: index.html
apps/ui-prototypes/family-app/: alerts.html  health.html  home.html  medication.html
apps/ui-prototypes/miniprogram/: home.html
apps/ui-prototypes/website/: index.html
apps/website/: hugo.toml  package.json
apps/website/layouts/: index.html
b2b/: Dockerfile.b2b
b2b/community-platform/: go.mod
b2b/community-platform/cmd/: main.go
b2b/hospital-api/: go.mod  go.sum  start.sh
b2b/hospital-api/cmd/: main.go
b2b/insurance-integration/: go.mod  go.sum
b2b/insurance-integration/cmd/: main.go
certs/: ca.crt  ca.key  client.crt  client.key  server.crt  server.key
cloud/: .env.example  docker-compose.dev.yml  go.mod
cloud/admin-api/: go.mod  go.sum
cloud/admin-api/cmd/: main.go
cloud/api-server/: Dockerfile  go.mod  go.sum
cloud/api-server/cmd/: main.go
cloud/config/emqx/: emqx.conf
cloud/data-pipeline/: Dockerfile  go.mod  go.sum  stop.sh
cloud/data-pipeline/cmd/: main.go
cloud/gateway/: Dockerfile  go.mod  go.sum
cloud/gateway/cmd/: main.go  server.go
cloud/gateway/config/: config.go  gateway.yaml
cloud/push-service/: Dockerfile  go.mod
cloud/push-service/cmd/: main.go
cloud/scripts/: setup-influx.sh  start-dev.sh
firmware/bracelet/entry/: CMakeLists.txt  battery_adc.c  battery_adc.h  board_init.c  board_init.h  cat1_at.c  cat1_at.h  display_st7789.c  display_st7789.h  free_rtos_tasks.c  free_rtos_tasks.h  gps_nmea.c  gps_nmea.h  main.c  sensors_imu.c  sensors_imu.h  sensors_ppg.c  sensors_ppg.h  sos_button.c  sos_button.h  test_debug.c  test_gps_parser  test_gps_parser.c  test_sensors  test_sensors.c  test_sos  test_sos.c
firmware/bracelet/entry/algorithms/: fall_detect.c  fall_detect.h  sliding_window.c  sliding_window.h  test_fall_detect.c  test_sliding_window.c
firmware/bracelet/entry/common/: crc16.c  crc16.h  log.c  log.h  ring_buffer.c  ring_buffer.h  test_crc16.c  test_log.c  test_ring_buffer.c
firmware/bracelet/entry/health/: health_collector.c  health_collector.h  test_health_collector.c
firmware/bracelet/entry/location/: geofence.c  geofence.h  gps_manager.c  gps_manager.h  test_geofence  test_geofence.c  test_gps_manager  test_gps_manager.c
firmware/bracelet/entry/ota/: boot_switch.c  boot_switch.h  ota_download.c  ota_download.h  ota_update.c  ota_update.h  ota_verify.c  ota_verify.h  test_ota_verify.c
firmware/bracelet/entry/power/: power_mgmt.c  power_mgmt.h  test_power_mgmt.c
firmware/bracelet/entry/protocol/: heartbeat.c  heartbeat.h  message_decode.c  message_decode.h  message_encode.c  message_encode.h  test_heartbeat.c  test_message_encode.c
firmware/bracelet/plus/: CMakeLists.txt  battery_optimizer.c  battery_optimizer.h  ble_pair.c  ble_pair.h  fall_detect.c  fall_detect.h  free_rtos_tasks.c  free_rtos_tasks.h  geofence_manager.c  geofence_manager.h  main.c
firmware/bracelet/pro/: CMakeLists.txt  board_pro.c  board_pro.h  display_amoled.c  display_amoled.h  ecg_driver.c  ecg_driver.h  free_rtos_tasks.c  free_rtos_tasks.h  gps_gnss.c  gps_gnss.h  main.c  power_optimizer.c  power_optimizer.h
firmware/common/: CMakeLists.txt
firmware/common/include/: brand_boot_logo.h  mqtt_common.h  (+2 more)
firmware/pillbox/auto/: CMakeLists.txt  ap_config_mode.c  ap_config_mode.h  ble_pair.c  ble_pair.h  dispensing.c  dispensing.h  empty_detector.c  empty_detector.h  idf_component.yml  main.c  med_rule_parser.c  med_rule_parser.h  nvs_store.c  nvs_store.h  opto_sensor.c  opto_sensor.h  schedule_engine.c  schedule_engine.h  state_machine.c  state_machine.h  test_debug  test_debug.c  test_dispensing  test_dispensing.c  test_empty_detector  test_empty_detector.c  test_med_rule  test_med_rule_parser.c  test_state_machine  test_state_machine.c  test_wifi_mqtt  test_wifi_mqtt.c
firmware/pillbox/smart/: CMakeLists.txt  app_link.c  app_link.h  idf_component.yml  main.c  oled_status.c  oled_status.h  reminder_scheduler.c  reminder_scheduler.h  test_scheduler.c  test_voice_reminder.c  voice_reminder.c  voice_reminder.h  volume_control.c  volume_control.h
scripts/: ci.sh  default-ports.env  gen-certs.sh  start.sh
scripts/lib/: common.sh  docker-compose.sh  firmware.sh  flutter-app.sh  go-service.sh  hugo-site.sh  vue-app.sh
shared/audit/: audit.go
shared/crypto/: crypto.go  crypto_test.go  go.mod  wb_aes.go
shared/protocol/: go.mod  protocol.go  protocol_test.go  wb_ble.go
shared/ratelimit/: go.mod  ratelimit.go  ratelimit_test.go
shared/sanitize/: go.mod  sanitize.go  sanitize_test.go
shared/validation/: go.mod  validation.go  validation_test.go
(+320 files in other folders)
